Added Facebook login flow

--- a/Jettison/Jettison-Info.plist
+++ b/Jettison/Jettison-Info.plist
@@ -20,8 +20,25 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.jettison.Jettison.Facebook</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb276344475874268</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>276344475874268</string>
+	<key>FacebookDisplayName</key>
+	<string>Jettison</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
