--- a/Jettison/Jettison.entitlements
+++ b/Jettison/Jettison.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>$(TeamIdentifierPrefix)me.gabrielrinaldi.Jettison</string>
+		<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
